remove unnecessary packages

--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,8 @@
 %!TEX encoding = UTF-8
 
 \documentclass[margin, line]{resume}
-\usepackage[pdfpagelabels=false,
+\usepackage[unicode=true,
+            pdfpagelabels=false,
             pdfauthor={Kautilya Chenna},
             pdftitle={Kautilya Chenna's Resume created on \today},
             pdfsubject={Resume},
@@ -28,7 +29,6 @@
 }
 
 % FONTS
-%\usepackage{xunicode}
 \usepackage{xltxtra}
 \setmainfont[SmallCapsFont={Alegreya},
              SmallCapsFeatures={Letters=SmallCaps}]{Georgia}
