--- a/resume.tex
+++ b/resume.tex
@@ -47,10 +47,13 @@
 
     \section{\mysidestyle \textsc{Summary}}
     I joined Omron Research as their 4th employee and have worked on a wide
-    range of research projects mainly focused on Optimization for Motion
-    Planning and Control. Before joining Omron, I spent 2 years at LL4MA Lab
+    range of research projects mainly focused on Motion
+    Planning and Bin Picking for Industrial Robots. At Omron I pushed for the
+    creation of Software Development Standards and created rules for Code Reveiws 
+    and Code Quality standards, helping us deliver clean, tested and working code on time.
+    Before joining Omron, I spent 2 years at LL4MA Lab
     working on Deep Learning for robotic manipulation tasks.\\[1mm]
-    I focus on delivering clean and maintainable code while iterating quickly.
+    I pride myself in delivering clean and maintainable code while iterating quickly.
     I am passionate about using technology to find solutions to our growing
     social needs.
 
@@ -63,7 +66,7 @@
     \section{\mysidestyle \textsc{Skills}}
 
     \textbf{Languages}: C++, Python, MATLAB \\[1mm]
-    \textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Keras, Jenkins, Docker and k8s \\[1mm]
+    \textbf{Tools}: PCL, ROS, Gazebo, OpenCV, Tensorflow, Keras, Jenkins, Docker \\[1mm]
     \textbf{Robots}: Omron Adept Robots, KUKA LBR4+, Rethink Robotics Baxter, SimLab's Allegro Hand%
 
 
@@ -77,12 +80,11 @@
     \href{https://www.omron.com/global/americas/usa.html}{\textbf{Omron Research Center of America (ORCA)}} \vspace{1pt}\\\vspace{1pt}%
     \textsl{Robotics Software Engineer} \hfill \textbf{November 2018 -- Present}\\ \vspace{-4.5mm}
     \begin{list2}
+        \item Designed and developed a real-time middleware in QNX for reactive robot control
         \item Developed test framework for an end-to-end random bin picking pipeline
-        \item Designed and developed a real-time middleware for reactive robot control
+        \item Worked on development of fast Motion Planning Algorithms based on RRT, EET and DPRM
         \item Created standards and guidelines for code reviews and code quality
-        \item Built and maintained Jenkins CI infrastructure used by 4 teams
-        \item Saved the organization >\$150k by reviewing and selecting an 
-        opensource \\alternative to a commercial product
+        \item Championed development of in-house Jenkins CI infrastructure, now used by 4 teams
     \end{list2}\vspace{-2.25mm}
 
     \href{https://robot-learning.cs.utah.edu}{\textbf{Learning Lab for Manipulation Autonomy (LL4MA Lab)}}, University of Utah \vspace{1pt}\\\vspace{1pt}%
@@ -135,8 +137,8 @@
 
     \sectionline
     \section{\mysidestyle \textsc{Publications}}
-     ``Planning Multi-Fingered Grasps as Probabilistic Inference in a Learned Deep Network''; Qingkai Lu,\\
-     \mbox{\bf Kautilya Chenna}, Balakumar Sundaralingam, Tucker Hermans; \textit{International Symposium on\\ Robotics Research (ISRR),} 2017. \texttt{[\href{http://www.cs.utah.edu/~thermans/papers/lu-isrr2017-deep-multifinger-grasping.pdf}{PDF}]} \texttt{[\href{https://robot-learning.cs.utah.edu/project/grasp\_inference}{CODE}]}%
+     ``Planning Multi-Fingered Grasps as Probabilistic Inference in a Learned Deep Network''; \\Qingkai Lu,
+     {\bf Kautilya Chenna}, Balakumar Sundaralingam, Tucker Hermans; \textit{International Symposium on\\ Robotics Research (ISRR),} 2017. \texttt{[\href{http://www.cs.utah.edu/~thermans/papers/lu-isrr2017-deep-multifinger-grasping.pdf}{PDF}]} \texttt{[\href{https://robot-learning.cs.utah.edu/project/grasp\_inference}{CODE}]}%
 
 
     %%%%%%%%%%%%%%%%
